feat: build docs (#64)

--- a/docs/commits.adoc
+++ b/docs/commits.adoc
@@ -1,4 +1,4 @@
-## Commits
+== Commits
 
 > The Conventional Commits specification is a lightweight convention on top of commit messages. It provides an easy set of rules for creating an explicit commit history; which makes it easier to write automated tools on top of. This convention dovetails with SemVer, by describing the features, fixes, and breaking changes made in commit messages.
 
@@ -12,7 +12,7 @@ The commit message should be structured as follows:
 [optional footer(s)]
 ```
 
-### Examples
+=== Examples
 
 - Basic `docs: correct spelling of CHANGELOG`
 - Basic with scope `feat(lang): add polish language`
@@ -20,6 +20,6 @@ The commit message should be structured as follows:
 More information can be found https://www.conventionalcommits.org/en/v1.0.0/#examples
 
 
-### Notes
+=== Notes
 
 Husky should check your commit messages, if these error the commit will not be made.
